--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "bootstrap": "3.3.7",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "sweetalert": "^2.1.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "bootstrap": "3.3.7"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
