--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,9 @@
               "src/styles.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "./node_modules/sweetalert/dist/sweetalert.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
